<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/burgerback1"
    tools:context=".yolo">

    <Button
        android:id="@+id/signInbtn"
        style="@style/buttonstyle"
        android:layout_width="126dp"
        android:layout_height="55dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="67dp"
        android:background="@drawable/rounded_button"
        android:text="@string/buttonstr"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/signUpbtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signUpbtn"
        style="@style/buttonstyle"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="67dp"
        android:width="126dp"
        android:height="55dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/montserrat"
        android:text="@string/buttonstr1"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/signInbtn" />

    <EditText
        android:id="@+id/Usernametxt"
        style="@style/UserNamestyle"
        android:hint="@string/emailHint"
        android:importantForAutofill="no"
        android:textColorLink="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordtxt"
        style="@style/PasswordStyle"
        android:hint="@string/invalid_password"
        android:importantForAutofill="no"
        android:textColorLink="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Usernametxt"
        app:layout_constraintVertical_bias="0.043" />
</androidx.constraintlayout.widget.ConstraintLayout>