<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewUserActivity"
    android:orientation="vertical"
    android:background="@drawable/burgerback">

    <EditText
        android:id="@+id/NewUserEmail"
        style="@style/UserNamestyle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:hint="@string/EmailHint"
        android:importantForAutofill="no"
        android:inputType="text|textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/NewUserPassword"
        style="@style/PasswordStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/PasswordHint"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NewUserEmail"
        app:layout_constraintVertical_bias="0.068" />

    <Button
        android:id="@+id/RegisterBtn"
        style="@style/buttonstyle"
        android:layout_width="126dp"
        android:layout_height="55dp"
        android:background="@drawable/rounded_button"
        android:text="@string/Registertext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NewUserPassword"
        app:layout_constraintVertical_bias="0.855" />







</androidx.constraintlayout.widget.ConstraintLayout>